Worked on feedback. Implemented new media queries for mobile and text compression. Fixed header on mobile sizes, changed button psuedo classes part3

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,9 +8,16 @@
   margin: 67px auto 60px 0;
 }
 
+@media screen and (max-width: 637px) {
+  .footer__copyright {
+    margin: 48px auto 36px 20px;
+  }
+}
+
 @media screen and (max-width: 515px) {
   .footer__copyright {
-    margin: 48px auto 36px 0;
+    margin: 48px auto 36px 19px;
     font-size: 14px;
+    max-width: calc(100% - 38px);
   }
 }
